# brass-runtime

./: .gitignore  .releaserc.json  AGENTS.md  BRASS_AGENT.md  CHANGELOG.md  Cargo.toml  INFORME_ARQUITECTURA_Y_RUTA_NATIVA_VSCODE.md  README.md  SECURITY.md  agent.md  brass-agent.batch.json  docker-compose.observability.yml  package-lock.json  package.json  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  tsconfig.types.json  tsup.config.ts  vitest.config.ts
.github/: dependabot.yml
crates/brass-engine-core/: Cargo.toml  LICENSE
crates/brass-engine-core/fuzz/: Cargo.toml
crates/brass-engine-core/fuzz/fuzz_targets/: abi_decoder.rs  state_models.rs
crates/brass-engine-core/src/: lib.rs  registry.rs  scheduler.rs  slab.rs  timer.rs  vm.rs
crates/brass-engine-core/tests/: lifecycle_corpus.rs
crates/brass-native-service/: Cargo.toml
crates/brass-native-service/src/: lib.rs  main.rs
crates/brass-runtime-wasm-engine/: Cargo.toml
crates/brass-runtime-wasm-engine/src/: lib.rs
docs/: ARCHITECTURE.md  README.md  agent-apply-mode.md  agent-approvals.md  agent-batch.md  agent-boundaries.md  agent-chat-sessions.md  agent-ci.md  agent-cli.md  agent-config.md  agent-context-discovery.md  agent-copilot-like-dx.md  agent-declarative-optimized-planning.md  agent-dx.md  agent-env-files.md  agent-follow-up-context.md  agent-global-usage.md  agent-host.md  agent-init.md  agent-install-and-configure.md  agent-language-workspace-ux.md  agent-llm-adapters.md  agent-local-install.md  agent-local-tests.md  agent-observability.md  agent-patch-quality-loop.md  agent-presets.md  agent-project-commands.md  agent-project-intelligence.md  agent-redaction.md  agent-release-readiness.md  agent-rollback-safety.md  agent-rollback.md  agent-run-artifacts.md  agent-vscode-auto-discovery.md  agent-vscode-batch-runner.md  agent-vscode-chat-layout.md  agent-vscode-clean-install.md  agent-vscode-code-actions.md  agent-vscode-diff-preview.md  (+38 more)
examples/: README.md
fixtures/: native-ipc-v1.json  native-lifecycle-v1.json
scripts/: agent-local-smoke.mjs  check-http-benchmark-budget.mjs  check-http-p99-budget.mjs  check-observability-benchmark-budget.mjs  check-runtime-benchmark-budget.mjs  check-runtime-primitives-budget.mjs  context-pack.mjs  (+13 more)
(+665 files in other folders)
