[package]
name = "brass-engine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Portable, host-independent contracts and state for Brass engines"

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
