[package]
name = "brass-native-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Read-only, cancelable native indexing/search pilot for Brass editor hosts"

[lib]
path = "src/lib.rs"

[[bin]]
name = "brass-native-service"
path = "src/main.rs"

[dependencies]
brass-engine-core = { path = "../brass-engine-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
