[package]
name = "brass-runtime-wasm-engine"
version = "0.2.0"
edition = "2021"
description = "WASM fiber VM for brass-runtime"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
