[package]
name = "brass-runtime-wasm-engine"
version = "0.2.0"
edition = "2021"
description = "WASM fiber VM for brass-runtime"
license = "MIT"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brass-engine-core = { path = "../brass-engine-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
